--- a/templates/snapmaker/holes.j2
+++ b/templates/snapmaker/holes.j2
@@ -6,7 +6,7 @@ M3 P100
 {% for depth in depth_steps_array %}
 {% for i in range(1, lowering_iters+1) %}
 G1 Z-{{ depth }} F{{ plunge_v }}
-G0 Z{{ lift_h }}
+G0 Z{{ lift_h }} F{{ work_v }}
 {% endfor %}
 {% endfor %}
 M5
