Fix: исправлена проблема с зависанием станка snapmaker

--- a/templates/snapmaker/metadata.j2
+++ b/templates/snapmaker/metadata.j2
@@ -23,7 +23,7 @@
 ;work_size_x: {{ X_size }}
 ;work_size_y: {{ Y_size }}
 ;origin: center
-;thumbnail: {{ image }}
+{{ thumbnail_image -}}
 ;Header End
 ;Snapmaker Luban 4.11.0
 ;{{ current_date }}
